fix: raise button `z-index`

--- a/index.less
+++ b/index.less
@@ -566,6 +566,10 @@
                 z-index: 2;
             }
 
+            .v-hl-btn[data-v-45080727] {
+                z-index: 2;
+            }
+
             .v-hl-container[data-v-45080727] {
                 clip-path    : none;
                 overflow-y   : visible;
@@ -755,7 +759,7 @@
                 .artist-title {
                     color: var(--textColor);
                 }
-                
+
                 .artist-header {
                     color: var(--textColor)
                 }
@@ -988,7 +992,7 @@
 
             &.playlist-page {
                 &[is-album="true"] {
-                    
+
                     .subtitle {
                         display: none !important;
                     }
@@ -999,9 +1003,9 @@
                 }
 
                 &[is-album="false"] {
-                    
+
                 }
-                
+
                 .artist-chip {
                     color: var(--textColor);
 
